# wikigen

./: AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: agent.rs  config.rs  main.rs  output.rs  prompts.rs  scanner.rs
src/provider/: anthropic.rs  openai.rs  opencode.rs
