[package]
name = "wikigen"
version = "0.1.0"
edition = "2021"
description = "A CLI that writes and maintains agent documentation for your codebase"
license = "MIT"
repository = "https://github.com/sonyarianto/wikigen"
keywords = ["documentation", "cli", "llm", "agent", "codebase"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "wikigen"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.13", features = ["json", "rustls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "6"
ignore = "0.4"
dialoguer = "0.12"
